# story-classifier

./: README.md  pyproject.toml
src/: main.py  training.csv
