[project]
name = "story-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Kalab J. Oster",email = "kalabjoster@wordprostitute.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "story_classifier", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
